[tool.poetry]
name = "korapay-client"
version = "0.1.0"
description = ""
authors = ["Gbenga Adeyi <adeyigbenga005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
